fix: add extra margin between blocks

--- a/style.css
+++ b/style.css
@@ -251,9 +251,23 @@ body {
     width: 100%;
   }
 
+  .section__title {
+    /* display: flex; */
+  }
+
   .text {
     padding: 0 15px;
   }
+}
+
+.mb12 {
+  display: block;
+  margin-bottom: 8px;
+}
+
+.mb6 {
+  margin-bottom: 6px;
+  
 }
 
 .date__content {
@@ -290,7 +304,7 @@ body {
 
     .princess {
       position: relative;
-      top: -12px;
+      top: -24px;
     }
   }
 }
@@ -362,7 +376,7 @@ img {
 
 .timing__title_span {
   position: relative;
-  top: -12px;
+  top: -20px;
 }
 
 .section__timing .section__title .princess {
@@ -423,7 +437,7 @@ img {
 /* DRESS CODE */
 .section__dress-code .section__title .princess {
   position: relative;
-  top: -12px;
+  top: -24px;
 }
 
 .section__dress-code .text {
@@ -440,8 +454,9 @@ img {
 }
 
 .section__title_span {
+  display: block;
   position: relative;
-  top: -12px;
+  top: -20px;
 }
 
 .section__dress-code,
